Update projects & badge lists - Update project data - Fix spacing for badge lists - Fix title line breaks for ALWP & LJAS project page titles

--- a/src/front/pages/Blog/posts/_general.scss
+++ b/src/front/pages/Blog/posts/_general.scss
@@ -16,7 +16,11 @@
     }
 
     > .time {
-      margin-bottom: size.$size-12;
+      margin-bottom: 0;
+    }
+
+    > .badge-list > li {
+      margin-top: size.$size-12;
     }
   }
 
