--- a/src/front/pages/Projects/pages/_index.scss
+++ b/src/front/pages/Projects/pages/_index.scss
@@ -19,16 +19,6 @@
     width: 100%;
   }
 
-  > .cover {
-    grid-column: 1/-1;
-    margin-bottom: size.$size-100;
-    transform: translateY(-27px);
-
-    > .badge-list {
-      margin-top: size.$size-12;
-    }
-  }
-
   > .project-overview {
     grid-column: span 3;
     transform: translateY(-17px);
@@ -128,6 +118,16 @@
           margin-bottom: 0;
         }
       }
+    }
+  }
+
+  > .cover {
+    grid-column: 1/-1;
+    margin-bottom: size.$size-100;
+    transform: translateY(-27px);
+
+    > .badge-list > li {
+      margin-top: size.$size-12;
     }
   }
 
